feat(chan): 添加缠论核心数据结构和计算引擎
- 定义缠论核心数据结构：分型、笔、线段、中枢、买卖点等
- 实现K线合并算法：处理包含关系生成标准K线序列
- 实现分型识别算法：识别顶分型和底分型
- 实现笔的构建算法：连接相邻顶底分型
- 实现线段计算算法：基于特质序列判断线段破坏
- 实现中枢识别算法：由线段重叠区域构成中枢
- 实现走势类型判断：区分盘整、上涨趋势、下跌趋势
- 实现买卖点识别算法：一买一卖、二买二卖、三买三卖
- 添加Java版本的缠论计算器实现
- 更新.gitignore文件添加logs目录排除规则